# geekos

./: .gitattributes  .gitignore  .gitlab-ci.yml  .submit  .submitUser  CMakeLists.txt  Dockerfile  geekos_docker.sh  provision.sh  sources.list
include/geekos/: blockdev.h  defs.h  gfs3.h  int.h  kthread.h  list.h  lock.h  mem.h  paging.h  percpu.h  pipe.h  projects.h  segment.h  signal.h  smp.h  synch.h  syscall.h  user.h  vfs.h
src/common/: bget.c
src/geekos/: .main.c.swp  README.txt  alarm.c  bitset.c  blockdev.c  bufcache.c  cfs.c  defs.asm  dma.c  elf.c  floppy.c  gdt.c  gfs2.c  gfs3.c  gosfs.c  ide.c  int.c  keyboard.c  kthread.c  lowlevel.asm  main.c  malloc.c  mem.c  paging.c  percpu.asm  percpu.c  pfat.c  pipe.c  sched.c  screen.c  segment.c  signal.c  smp.c  synch.c  syscall.c  timer.c  trap.c  tss.c  user.c  userseg.c  (+3 more)
src/geekos/net/: arp.c  ethernet.c  ip.c  net.c  routing.c  socket.c  sys_net.c  tcp.c
src/libc/: compat.c  process.c
src/tools/: buildFat.c  fake-blockdev.c  gfs2f.c
src/user/: affinity.c  blkpipe.c  cat.c  execr1.c  execr2.c  execr3.c  fork-p1.c  forkbomb1.c  forkexec.c  forkpipe.c  gfs3tst.c  lockdgct.c  login.c  long.c  pipe-p1.c  pipe-p2.c  pipe-p4.c  pipe1k.c  shell.c  sigpipe.c  spin.c  sum.c  workload.c
